--- a/src/javier/gatsby-theme-cara/sections/contact.mdx
+++ b/src/javier/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Visit [my linkedin](https://www.linkedin.com/in/javiergsalcedo/)
+Visit [my linkedin](https://www.linkedin.com/in/@lekoartsgsalcedo/)
